Improvements of Join Widget

--- a/static/ikwen/css/console.css
+++ b/static/ikwen/css/console.css
@@ -34,7 +34,7 @@
 #stage .card h3 img {margin-right: 6px}
 #stage .card > div:first-of-type h4 {margin: 0 0 .5em;}
 
-.cr-join-widget {margin: 45px 0 60px}
+.cr-join-widget {margin: 35px 0 70px}
 .bottom-join .cr-join-widget {margin: 0}
 .cr-join-widget .btn.join-community {width: 240px}
 .bottom-join {background: #fff; bottom: -140px; height: 125px; left: 0;
@@ -162,7 +162,8 @@
 .card-li .cover img {border-radius: 4px;float: left;margin: 10px;}
 .card-li .img {background: no-repeat center; background-size: cover; height: 180px}
 .card-li .btn {font-weight: 600}
-.join-successful {color: #57b21b;display: none;font-size: 30px;height: 35px;line-height: 32px;}
+.join-successful {color: #57b21b;display: none;font-size: 30px;height: 35px;line-height: 32px;margin:auto;max-width:300px;text-align: center;}
+.join-successful .btn {min-width:240px}
 .access-request .member-name {font-weight: 700;}
 .disc.coupon {background: #e84735;border-radius: 13px;color: #fff;float: left;font-size: 15px;height: 26px;line-height: 24px;margin: -5px 5px 0 0;text-align: center;width: 26px;}
 
