1 - Improved introspection on ikwen.core.views.generic: HybridListView and ChangeObjectBase 2 - New context processor ikwen.core.context_processors.member_apps with cached data 3 - Improved implementation of Service.to_dict() 4 - Some minor fixes

--- a/core/templates/core/base_bs.html
+++ b/core/templates/core/base_bs.html
@@ -69,10 +69,9 @@
                                                         <li class="ik-apps">
                                                             <div>
                                                                 {% for app in ikwen_apps %}
-                                                                <a href="{{ app.url }}" class="ik-app" style="clear: none">
-                                                                    <div class="logo" style="background-image: url({{ app.logo }})"></div>
+                                                                <a href="{{ app.url }}" class="ik-app">
+                                                                    <div class="logo" style="background-image: url({{ settings.IKWEN_MEDIA_URL }}{{ app.logo }})"></div>
                                                                     <div class="name">{{ app.project_name }}</div>
-                                                                    <div class="clearfix"></div>
                                                                 </a>
                                                                 {% endfor %}
                                                                 <div class="clearfix"></div>
@@ -161,10 +160,9 @@
                                                     <li class="ik-apps">
                                                         <div>
                                                             {% for app in ikwen_apps %}
-                                                            <a href="{{ app.url }}" class="ik-app" style="clear: none">
-                                                                <div class="logo" style="background-image: url({{ app.logo }})"></div>
+                                                            <a href="{{ app.url }}" class="ik-app">
+                                                                <div class="logo" style="background-image: url({{ settings.IKWEN_MEDIA_URL }}{{ app.logo }})"></div>
                                                                 <div class="name">{{ app.project_name }}</div>
-                                                                <div class="clearfix"></div>
                                                             </a>
                                                             {% endfor %}
                                                             <div class="clearfix"></div>
