1 - core/snippets/color_and_icons.html: <meta name= "apple-mobile-web-app-status-bar-style" ..> added 2 - core/snippets/object_list_results.html: show image thumbnail on list if object has image 3 - core/sent_email_log.html: show an red icon for email with status not success 4 - ConfigAdmin: google_plus_link and tumblr_link removed 5 - New field Config.brand_color

--- a/core/templates/core/sent_email_detail.html
+++ b/core/templates/core/sent_email_detail.html
@@ -30,6 +30,11 @@
         <div class="container-fluid">
             {{ email.body|safe }}
         </div>
+        {% if email.status != 'OK' %}
+            <div class="failure" style="margin-bottom: 15px; padding: 15px">
+                {{ email.status }}
+            </div>
+        {% endif %}
     </div>
 {% endblock %}
 
