--- a/core/templates/core/sent_email_log.html
+++ b/core/templates/core/sent_email_log.html
@@ -8,6 +8,7 @@
 {% block head_style %}
     {{ block.super }}
     <style>
+        .sending-failed {margin: 2px 3px 0 0}
         #admin-tools-actions, .email-infos-mobile {
             display: none;
         }
