--- a/core/templates/core/snippets/color_and_icons.html
+++ b/core/templates/core/snippets/color_and_icons.html
@@ -3,6 +3,8 @@
 
 <meta name="msapplication-TileColor" content="{% if config.brand_color %}{{ config.brand_color }}{% else %}#ffffff{% endif %}">
 <meta name="msapplication-navbutton-color" content="{% if config.brand_color %}{{ config.brand_color }}{% else %}#ffffff{% endif %}">
+<meta name="apple-mobile-web-app-status-bar-style" content="{% if config.brand_color %}{{ config.brand_color }}{% else %}#ffffff{% endif %}">
+
 <meta name="msapplication-TileImage" content="{% get_media_prefix %}icons/ms-icon-144x144.png">
 
 <link rel="apple-touch-icon" sizes="57x57" href="{% get_media_prefix %}icons/apple-icon-57x57.png">
