--- a/core/templates/core/snippets/sent_email_log_results.html
+++ b/core/templates/core/snippets/sent_email_log_results.html
@@ -9,12 +9,22 @@
             <div class="email-infos">
                 <span class="col-lg-2 col-md-2 col-sm-3">{{ obj }}</span>
                 <span class="col-lg-4 col-lg-push-2 col-md-6 col-md-push-2 col-sm-6 col-sm-push-1" style="color: #333333;">{{ obj.subject }}</span>
-                <span class="col-lg-2 col-lg-push-4 col-md-2 col-md-push-2 col-sm-2 col-sm-push-1 event-date text-muted text-right"><time>{{ obj.created_on|date }}</time></span>
+                <span class="col-lg-2 col-lg-push-4 col-md-2 col-md-push-2 col-sm-2 col-sm-push-1 event-date text-muted text-right">
+                    <time>{{ obj.created_on|date:"Y-m-d H:i" }}</time>
+                    {% if obj.status != 'OK' %}
+                        <i class="fa fa-times text-danger pull-right sending-failed"></i>
+                    {% endif %}
+                </span>
             </div>
             <div class="email-infos-mobile">
                 <div class="">
                     <span>{{ obj }}</span>
-                    <span class="event-date text-muted pull-right"><time>{{ obj.created_on|date }}</time></span>
+                    <span class="event-date text-muted pull-right">
+                        {% if obj.status != 'OK' %}
+                            <i class="fa fa-times text-danger pull-right sending-failed"></i>
+                        {% endif %}
+                        <time>{{ obj.created_on|date:"Y-m-d H:i" }}</time>
+                    </span>
                 </div>
                 <div style="color: #333333;">{{ obj.subject }}</div>
             </div>
@@ -24,7 +34,9 @@
 </ul>
 {% if objects_page.paginator.num_pages > 1 %}
 <ul class="pagination">
-    <li class="disabled" data-val="first"><a href="javascript:;" aria-label="Previous"><span aria-hidden="true">«</span></a></li>
+    {% if objects_page.paginator.num_pages > max_visible_page_count and page_range.0 >= max_visible_page_count  %}
+        <li class="page" data-val="first"><a href="javascript:;" aria-label="Previous"><span aria-hidden="true">«</span></a></li>
+    {% endif %}
     {% for page in page_range %}
         <li class="page{% if page == objects_page.number %} active{% endif %}" data-val="{{ page }}">
             <a href="javascript:;">
@@ -32,7 +44,9 @@
             </a>
         </li>
     {% endfor %}
-    <li data-val="-1"><a href="javascript:;" aria-label="Next"><span aria-hidden="true">»</span></a></li>
+    {% if objects_page.paginator.num_pages > max_visible_page_count and max_page < objects_page.paginator.num_pages %}
+        <li class="page{% if max_page == objects_page.paginator.num_pages %} disabled{% endif %}" data-val="-1"><a href="javascript:;" aria-label="Next"><span aria-hidden="true">»</span></a></li>
+    {% endif %}
 </ul>
 {% endif %}
 <div id="page-navigation" class="text-muted">
