1 - core/snippets/object_list_results.html shows thumbnail image if there is one 2 - core/object_list_base.html always include core/snippets/sort_and_actions.html 3 - Other minor improvements

--- a/core/templates/core/snippets/object_list_results.html
+++ b/core/templates/core/snippets/object_list_results.html
@@ -6,7 +6,7 @@
     <li class="ik-li list-group-item {{ obj.status }}" id="{{ obj.id }}" data-id="{{ obj.id }}">
         {% if has_image %}
             <a href="{{ obj_url }}" class="image"
-               style="background-image: url({% if obj.image.name %}{% get_media_prefix %}{{ obj.image.name }}{% else %}{{ settings.IKWEN_MEDIA_URL }}no_photo.png{% endif %})"></a>
+               style="background-image: url({% if obj.image.thumb_name %}{% get_media_prefix %}{{ obj.image.thumb_name }}{% elif obj.image.name %}{% get_media_prefix %}{{ obj.image.name }}{% else %}{{ settings.IKWEN_MEDIA_URL }}no_photo.png{% endif %})"></a>
             <div class="info">
                 <a href="{{ obj_url }}" class="title">{{ obj }}</a>
                 {% with obj_details=obj.get_obj_details %}
