--- a/core/templates/core/snippets/sort_and_actions.html
+++ b/core/templates/core/snippets/sort_and_actions.html
@@ -1,7 +1,9 @@
 <script>
     (function() {
-        ikwen.pageSize = {{ page_size }};
-        ikwen.initSortable();
+        {% if is_sortable %}
+            ikwen.pageSize = {{ page_size }};
+            ikwen.initSortable();
+        {% endif %}
         $('#admin-content').on('click', '.actions .active.on', function() {
             var objectId = $(this).parents('.ik-li').data('id');
             $(this).toggleClass('on off');
