1 - core.generic.HybridListView.export() now exports to CSV 2 - accesscontrol.admin.MemberResource.dehydrate_gender() does not translate 3 - On registration user is redirected to REGISTER_REDIRECT_URL setting 4 - core.generic.ChangeObjectBase now has field show_add 5 - base_admin.html now keeps filter values when page browsing

--- a/core/templates/core/base_admin.html
+++ b/core/templates/core/base_admin.html
@@ -206,8 +206,22 @@
 
                 })
             }).on('click', '.pagination .page:not(.disabled)', function() {
+                let params = [];
+                $('div#admin-tools .filter select').each(function() {
+                    let paramName = $(this).prop('name');
+                    if (paramName) params[paramName] = $(this).val();
+                });
+                $('div#admin-tools .filter input').each(function() {
+                    let paramName = $(this).prop('name');
+                    if (paramName) params[paramName] = $(this).val();
+                });
+                params['q'] = $('#context-search').val();
                 let query = window.location.search,
-                    page = $(this).data('val');
+                    page = $(this).data('val'),
+                    paramString = '';
+                for (let key in params) paramString += '&' + key + '=' + params[key];
+                if (query && query !== '?') query += paramString;
+                else query = paramString.substr(1);
                 if (query && query !== '?') query += '&format=html_results&page=' + page;
                 else query = 'format=html_results&page=' + page;
                 let $resultsStage = $(this).parents('.results-stage');
