1 - Support for AUTH_WITHOUT_PASSWORD setting 2 - New module ikwen.core.analytics for PWA related analytics 3 - New model ikwen.accesscontrol.models.PWAProfile 4 - More PWA related updates

--- a/accesscontrol/templates/accesscontrol/sign_in_minimal.html
+++ b/accesscontrol/templates/accesscontrol/sign_in_minimal.html
@@ -302,17 +302,22 @@
                         $('#content .failure').show().html("{% trans "Oops! An error occurred. Check your internet." %}");
                     },
                     success: function(data) {
-                        _$btn.removeClass('processing');
-                        $('#content').removeClass('init');
                         if (data.existing) {
-                            location.hash = 'login';
-                            $('#password').focus();
                             $('#auth').prop('action', "{% url 'ikwen:do_sign_in' %}?{{ request.META.QUERY_STRING|safe }}");
+                            if (data.no_password && !data.is_staff) {
+                                $('#password').val('---');  // --- is just a random password not to leave the field blank
+                                $('#submit').click();
+                                return
+                            }
+                            location.hash = 'login';
+                            _$btn.removeClass('processing');
+                            $('#content').removeClass('init');
+                            $('#password').focus();
                             if (username.isValidEmail()) {
                                 $('.forgotten-pwd').prop('href', '{{ forgotten_password_url|ikwenize }}' + '?' + 'username=' + username);
                             }
                         } else {
-                            $('#content').hide().addClass('register step1').fadeIn('normal', 'linear', function() {
+                            $('#content').hide().removeClass('init').addClass('register step1').fadeIn('normal', 'linear', function() {
                                 $('#password').focus();
                             });
                             $('#stage').removeClass('form-wrapper').addClass('col-sm-9 col-md-8');
