--- a/core/templates/core/base_bs.html
+++ b/core/templates/core/base_bs.html
@@ -12,7 +12,7 @@
 		{% block head_style %}
             <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
             <link rel='stylesheet' href="{% static 'ikwen/css/flatly.bootstrap.min.css' %}" />
-            <link rel='stylesheet' href="{% static 'ikwen/css/base.css' %}?v=20.3.27" />
+            <link rel='stylesheet' href="{% static 'ikwen/css/base.css' %}?v=20.5.14" />
 		{% endblock %}
         {% block head_js %}
             <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -223,6 +223,14 @@
                 {% endif %}
             </footer>
         {% endblock %}
+        <div id="pwa-overlay">
+            <div class="text-has-shade text-center visible-xs visible-sm">
+                <h3 style="font-weight: 600">{% trans "Click the button below" %}</h3>
+                <div>
+                    <i class="fa fa-arrow-down" style="font-size: 27px"></i>
+                </div>
+            </div>
+        </div>
         <div class="edge-swipe-overlay"></div>
         <div class="modal fade" id="modal-generic-notice" tabindex="-1" role="dialog">
             <div class="modal-dialog" role="document">
