--- a/core/templates/core/snippets/language_switcher.html
+++ b/core/templates/core/snippets/language_switcher.html
@@ -3,8 +3,8 @@
     <i class="fa fa-language"></i>
     {% get_available_languages as LANGUAGES %}
     {% get_current_language as LANGUAGE_CODE %}
-    <label for="language" class="sr-only">{% trans "Language" %}</label>
-    <select id="language" name="language" onchange="$(this).parents('form').submit()">
+    <label class="sr-only">{% trans "Language" %}</label>
+    <select name="language" onchange="$(this).parents('form').submit()">
         {% for lang in LANGUAGES %}
             <option value="{{ lang.0 }}"{% if LANGUAGE_CODE == lang.0 %} selected="selected"{% endif %}>{{ lang.0|upper }}</option>
         {% endfor %}
