1 - Improvements in push send 2 - Notification of PWA install improved 3 - Updated translation 4 - Improve in generation of manifest.json and Service.activate_ssl() 5 - New batch script to generate apache.conf files on a new server

--- a/core/templates/core/cloud_setup/manifest.json.html
+++ b/core/templates/core/cloud_setup/manifest.json.html
@@ -1,6 +1,6 @@
 {
-  "name": "{{ project_name }}",
-  "short_name": "{{ project_name }}",
+  "name": "{{ app_name }}",
+  "short_name": "{{ app_name }}",
   "description": "{{ short_description }}",
   "icons": [{
     "src": "https://media.ikwen.com/{{ ikwen_name }}/icons/icon-128x128.png",
