Mail image now correct, button colors also

--- a/core/templates/core/mails/pwa_installed_notification.html
+++ b/core/templates/core/mails/pwa_installed_notification.html
@@ -73,7 +73,7 @@ a[x-apple-data-detectors] {
 	min-width: 200px;
 }
 .button-td:hover, .button-a:hover {
-	background: #b4008d !important;
+	background: #ef7130 !important;
 }
 
 .screen-display{
@@ -169,8 +169,10 @@ table.center-on-narrow {
             <!-- Hero Image, Flush : BEGIN -->
             <tr>
               <td class="full-width-image" align="center" style="padding:15px">
-                  <img src="{% static 'ebonixe/img/ebonixe-ad-verification.jpg' %}" alt="alt_text" border="0"  style="width: 100%; height: auto;">
-                </td>
+                <div style="border-radius: 50%; width: 200px; height: 200px; overflow: hidden">
+                  <img src="{% static 'ikwen/img/pwa-installed.jpeg' %}" alt="alt_text" border="0"  style="width: 100%; height: auto;">
+                </div>
+              </td>
             </tr>
             <!-- Hero Image, Flush : END -->
 
@@ -201,8 +203,8 @@ table.center-on-narrow {
                       <!-- Button : Begin -->
                         <table cellspacing="0" cellpadding="0" border="0" align="center" style="margin: auto">
                             <tr>
-                                <td style="border-radius: 3px; background: #233682; text-align: center;" class="button-td">
-                                    <a href="{{ cta_url }}" style="background: #4248b2;padding: 15px 10px;color: #ffffff;font-size: 13px; line-height: 1.1;min-width: 240px; text-align: center; text-decoration: none; display: block; border-radius: 3px;" class="button-a">
+                                <td style="border-radius: 3px; background: #243982; text-align: center;" class="button-td">
+                                    <a href="{{ cta_url }}" style="background: #243982;padding: 15px 10px;color: #ffffff;font-size: 13px; line-height: 1.1;min-width: 240px; text-align: center; text-decoration: none; display: block; border-radius: 3px;" class="button-a">
                                   <!--[if mso]>&nbsp;&nbsp;&nbsp;&nbsp;<![endif]-->{% trans "View profile" %}<!--[if mso]>&nbsp;&nbsp;&nbsp;&nbsp;<![endif]-->
                                   </a>
                                 </td>
