1 - Bug fix: Call of initSortable now correctly done on base admin after results page load 2 - AbstractConfig.whatapp_phone added and configurable from admin 3 - Bug fix on base.css regarding #pwa-overlay rules

--- a/core/templates/core/base_admin.html
+++ b/core/templates/core/base_admin.html
@@ -228,7 +228,9 @@
                 if ($resultsStage.length === 0) $resultsStage = $('#results');
                 $resultsStage.find('.spinner').fadeIn();
                 {% if is_sortable %}
-                    $resultsStage.load('', query, ikwen.initSortable);
+                    $resultsStage.load('', query, function() {
+                        ikwen.initSortable();
+                    });
                 {% else %}
                     $resultsStage.load('', query);
                 {% endif %}
